WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143028
[WK2] Responses with 302 HTTP Status Code should not be cached
https://bugs.webkit.org/show_bug.cgi?id=143028
Summary
[WK2] Responses with 302 HTTP Status Code should not be cached
Chris Dumez
Reported
2015-03-24 16:53:18 PDT
Responses with 302 HTTP Status Code should not be cached as per RFC 7231:
http://tools.ietf.org/html/rfc7231#section-6.1
Radar: <
rdar://problem/19714040
>
Attachments
Patch
(4.46 KB, patch)
2015-03-24 17:32 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-mavericks
(525.41 KB, application/zip)
2015-03-24 18:22 PDT
,
Build Bot
no flags
Details
Patch
(4.46 KB, patch)
2015-03-24 19:06 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-03-24 17:32:24 PDT
Created
attachment 249368
[details]
Patch
Build Bot
Comment 2
2015-03-24 18:22:00 PDT
Comment on
attachment 249368
[details]
Patch
Attachment 249368
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/6198283856773120
New failing tests: fast/regions/auto-size/autoheight-two-pass-layout-complex-002.html
Build Bot
Comment 3
2015-03-24 18:22:03 PDT
Created
attachment 249372
[details]
Archive of layout-test-results from ews102 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-mavericks Platform: Mac OS X 10.9.5
Chris Dumez
Comment 4
2015-03-24 19:06:08 PDT
Created
attachment 249376
[details]
Patch
Chris Dumez
Comment 5
2015-03-24 19:18:50 PDT
Comment on
attachment 249376
[details]
Patch Clearing flags on attachment: 249376 Committed
r181926
: <
http://trac.webkit.org/changeset/181926
>
Chris Dumez
Comment 6
2015-03-24 19:18:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug