[WK2] Responses with 302 HTTP Status Code should not be cached https://bugs.webkit.org/show_bug.cgi?id=143028 <rdar://problem/19714040>

Reviewed by Antti Koivisto.

Source/WebKit2:

Responses with 302 HTTP Status Code should not be cached as per
RFC 7231:
http://tools.ietf.org/html/rfc7231#section-6.1

This patch updates our disk cache policy accordingly.

Test: http/tests/cache/disk-cache/disk-cache-302-status-code.html

* NetworkProcess/cache/NetworkCache.cpp:
(WebKit::NetworkCache::canStore):

LayoutTests:

Add layout test to check that responses with 302 HTTP Status Code
are not cached.

* http/tests/cache/disk-cache/disk-cache-302-status-code-expected.txt: Added.
* http/tests/cache/disk-cache/disk-cache-302-status-code.html: Added.

Canonical link: https://commits.webkit.org/161054@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181926 268f45cc-cd09-0410-ab3c-d52691b4dbfc